<resources>
    <string name="app_name">BasicKotlin</string>

    <string name="list_data">List Data</string>
    <string name="sembuh">Sembuh</string>
    <string name="positif">Positif</string>
    <string name="meninggal">Meninggal</string>
    <string name="kode">Kode Provinsi</string>
    <string name="provinsi">Provinsi</string>
    <string name="fid">Data Identitas</string>
    <string name="indonesia">Indonesia</string>
    <string name="h1">Protokol Kesehatan 3M</string>
    <string name="h2">Data Covid-19 Provinsi</string>
    <string name="span1">Memakai Masker</string>
    <string name="span2">Mencuci Tangan</string>
    <string name="span3">Menjaga Jarak</string>

    <string name="buttonProvinsi">Data Provinsi Indonesia</string>
    <string name="title_activity_maps">Map</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoia2FzcHVsYW53YXIiLCJhIjoiY2txaWNxZ3VyMDRkejJ3cHFncWs5bWFtaSJ9.7umDC0OHEO5B5e2_HPklWw</string>
</resources>