<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_background"
    android:layout_margin="4dp"
    >
    <TextView
        android:id="@+id/tv_provinsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:drawableLeft="@drawable/ic_travel_holiday_vacation_310_89073"
        android:drawablePadding="8dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="DKI Jakarta"
        android:textSize="17dp"
        android:textColor="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Textview_kalimat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:text="@string/sembuh"
        app:layout_constraintBottom_toBottomOf="@+id/tv_recovery"
        app:layout_constraintStart_toStartOf="@+id/tv_provinsi"
        app:layout_constraintTop_toTopOf="@+id/tv_recovery" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Textview_kalimat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/positif"
        app:layout_constraintBottom_toBottomOf="@+id/tv_positive"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/tv_positive" />

    <TextView
        android:id="@+id/textView5"
        style="@style/Textview_kalimat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meninggal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_dead"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/tv_dead" />

    <TextView
        android:id="@+id/tv_recovery"
        style="@style/Textview_provinsi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:drawableRight="@drawable/ic_hands_protect_safe_clean_healthy_wash_covid_icon_141644"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/greenDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_provinsi" />

    <TextView
        android:id="@+id/tv_dead"
        style="@style/Textview_provinsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:drawableRight="@drawable/ic_death_dead_tombstone_bird_cloud_graveyard_icon_134750"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/merah"
        app:layout_constraintEnd_toEndOf="@+id/tv_recovery"
        app:layout_constraintTop_toBottomOf="@+id/tv_recovery" />

    <TextView
        android:id="@+id/tv_positive"
        style="@style/Textview_provinsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:drawableRight="@drawable/ic_virus_coronavirus_covid_covid_icon_134829"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/kuning"
        app:layout_constraintEnd_toEndOf="@+id/tv_dead"
        app:layout_constraintTop_toBottomOf="@+id/tv_dead" />

    <TextView
        android:id="@+id/textView11"
        style="@style/Textview_kalimat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kode"
        app:layout_constraintBottom_toBottomOf="@+id/tv_code"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/tv_code" />

    <TextView
        android:id="@+id/textView12"
        style="@style/Textview_kalimat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fid"
        app:layout_constraintBottom_toBottomOf="@+id/tv_fid"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/tv_fid" />

    <TextView
        android:id="@+id/tv_code"
        style="@style/Textview_provinsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:drawableRight="@drawable/ic_kode_141605"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/background"
        app:layout_constraintEnd_toEndOf="@+id/tv_positive"
        app:layout_constraintTop_toBottomOf="@+id/tv_positive" />

    <TextView
        android:id="@+id/tv_fid"
        style="@style/Textview_provinsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="16dp"
        android:drawableRight="@drawable/ic_fid"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/birugelap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_code" />

</androidx.constraintlayout.widget.ConstraintLayout>